<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    android:background="@color/VeryDarkGray">

    <ImageButton
        android:id="@+id/Back"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:background="@drawable/back"/>

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:src="@drawable/user"
        android:contentDescription="@string/name_profile"
        android:layout_marginTop="20sp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/ProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_profile"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/StoneGray"
        android:layout_marginTop="20sp"/>

    <TextView
        android:id="@+id/numberPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/Azure"
        android:layout_marginTop="20sp"/>

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        android:backgroundTint="@color/LimeGreen"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"/>

</LinearLayout>