<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/VeryDarkGray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="30sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/TheSeaWave"
            android:gravity="center"/>

        <!-- Поле для ввода электронной почты -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/e_mail"
            android:textSize="20sp"
            android:textColorHint="@color/TheSeaWave"
            android:textColor="@color/TheSeaWave">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/TheSeaWave"
                android:textSize="20sp"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Поле для ввода пароля -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textColorHint="@color/TheSeaWave"
            android:textSize="20sp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/TheSeaWave"
                android:textSize="20sp"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Поле для ввода номера телефона -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textColorHint="@color/TheSeaWave"
            android:textSize="15sp"
            android:hint="@string/phone_number_with_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/TheSeaWave"
                android:textSize="15sp"
                android:inputType="phone"
                android:maxLength="15"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Кнопка Регистрация -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:textSize="20sp"
            android:backgroundTint="@color/MintCream"
            android:layout_marginTop="16sp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>