<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/VeryDarkGray">

    <ImageButton
        android:id="@+id/icon"
        android:layout_width="55sp"
        android:layout_height="55sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="15sp"
        android:background="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginBottom="20sp"
        android:text="@string/name"
        android:textColor="@color/TheSeaWave"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/icon"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toTopOf="@+id/icon" />

    <TextView
        android:id="@+id/last_message"
        android:layout_width="150sp"
        android:layout_height="15sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:text="@string/last_message"
        android:textColor="@color/TheSeaWave"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/icon"
        app:layout_constraintStart_toEndOf="@+id/icon"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="wrap_content"
        android:layout_height="15sp"
        android:layout_marginEnd="10sp"
        android:layout_marginTop="20sp"
        android:text="@string/timestamp"
        android:textColor="@color/TheSeaWave"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name" />

</androidx.constraintlayout.widget.ConstraintLayout>